--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,9 @@
 						<p class="dispatcherTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							Dispatcher</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Working with Dispatcher</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Working with Dispatcher</p>
+						</div>
 						<p class="publishDate">April 25, 2023</p>
 					</div>
 				</div>
@@ -88,7 +90,9 @@
 						<p class="spaTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM SPA</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Mapping AEM Component to SPA Component</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" >Mapping AEM Component to SPA Component</p>
+						</div>
 						<p class="publishDate">April 11, 2023</p>
 					</div>
 				</div>
@@ -101,7 +105,9 @@
 						<p class="spaTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM SPA</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Getting started with AEM SPA</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" >Getting started with AEM SPA</p>
+						</div>
 						<p class="publishDate">March 29, 2023</p>
 					</div>
 				</div>
@@ -114,7 +120,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">How to Add Custom Functions in Rule Editor</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" >How to Add Custom Functions in Rule Editor</p>
+						</div>
 						<p class="publishDate">March 15, 2023</p>
 					</div>
 				</div>
@@ -127,7 +135,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Submitting Adaptive Form using Form Data Model</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" >Submitting Adaptive Form using Form Data Model</p>
+						</div>
 						<p class="publishDate">February 28, 2023</p>
 					</div>
 				</div>
@@ -140,7 +150,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">OCR Data Extraction in AEM Forms</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" >OCR Data Extraction in AEM Forms</p>
+						</div>
 						<p class="publishDate">June 09, 2023</p>
 					</div>
 				</div>
@@ -153,7 +165,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Enhancing Security with SMS Two Factor Authentication in AEM Forms</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" >Enhancing Security with SMS Two Factor Authentication in AEM Forms</p>
+						</div>
 						<p class="publishDate">June 24, 2023</p>
 					</div>
 				</div>
@@ -166,7 +180,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">AEM GraphQL</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" >AEM GraphQL</p>
+						</div>
 						<p class="publishDate">February 14, 2023</p>
 					</div>
 				</div>
@@ -179,7 +195,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Query Builder in AEM</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Query Builder in AEM</p>
+						</div>
 						<p class="publishDate">May 23, 2023</p>
 					</div>
 				</div>
@@ -192,7 +210,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">AEM as a Cloud Service: Powering Next-Generation Digital Experiences</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">AEM as a Cloud Service: Powering Next-Generation Digital Experiences</p>
+						</div>
 						<p class="publishDate">May 24, 2023</p>
 					</div>
 				</div>
@@ -205,7 +225,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Context Aware Configuration</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Context Aware Configuration</p>
+						</div>
 						<p class="publishDate">November 09, 2023</p>
 					</div>
 				</div>
@@ -218,7 +240,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Targeting in AEM - Part 1</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Targeting in AEM - Part 1</p>
+						</div>
 						<p class="publishDate">August 01, 2024</p>
 					</div>
 				</div>
@@ -231,7 +255,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Indexing in AEM</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Indexing in AEM</p>
+						</div>
 						<p class="publishDate">November 24, 2023</p>
 					</div>
 				</div>
@@ -244,7 +270,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Sending Email on Submission of Adaptive Form</p>
+						<div class="one-line">
+							<p class="blog-title tooltip" style="font-size: 1em; color: #555;">Sending Email on Submission of Adaptive Form</p>
+						</div>
 						<p class="publishDate">January 31, 2023</p>
 					</div>
 				</div>
@@ -252,12 +280,14 @@
 			<a href="./blogs/rule-editor-show-hide.html" style="text-decoration: none;" class="blog-item">
 				<div id="forms" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-					<img src="images/Tile Forms.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<img src="images/Tile Forms.jpg" alt="Card Image" style="width: 100%; height: 30%; display: block;">
 					<div style="padding: 16px;">
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Show Hide in Rule Editor</p>
+						<div class="one-line">
+							<p class="blog-title tooltip" style="font-size: 1em; color: #555;">Show Hide in Rule Editor</p>
+						</div>
 						<p class="publishDate">July 04, 2024</p>
 					</div>
 				</div>
@@ -270,7 +300,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Custom Prefill Services In AEM Forms</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Custom Prefill Services In AEM Forms</p>
+						</div>
 						<p class="publishDate">June 20, 2024</p>
 					</div>
 				</div>
@@ -283,7 +315,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Geolocation : AEM Forms with Dynamic Location</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Geolocation : AEM Forms with Dynamic Location</p>
+						</div>
 						<p class="publishDate">July 19, 2024</p>
 					</div>
 				</div>
@@ -296,7 +330,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">AEM Forms with Google Maps API's</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">AEM Forms with Google Maps API's</p>
+						</div>
 						<p class="publishDate">August 03, 2024</p>
 					</div>
 				</div>
@@ -309,7 +345,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Introduction to AEM Forms</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Introduction to AEM Forms</p>
+						</div>
 						<p class="publishDate">January 17, 2023</p>
 					</div>
 				</div>
@@ -322,7 +360,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Introduction to AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Introduction to AEM Sites</p>
+						</div>
 						<p class="publishDate">January 3, 2023</p>
 					</div>
 				</div>
@@ -335,7 +375,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Handelling Vanity URLs in AEM</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Handelling Vanity URLs in AEM</p>
+						</div>
 						<p class="publishDate">July 9, 2023</p>
 					</div>
 				</div>
@@ -348,7 +390,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">OSGI Configuration Factory</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">OSGI Configuration Factory</p>
+						</div>
 						<p class="publishDate">July 24, 2023</p>
 					</div>
 				</div>
@@ -361,7 +405,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">MSM (Multi Site Manager)</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">MSM (Multi Site Manager)</p>
+						</div>
 						<p class="publishDate">May 9, 2023</p>
 					</div>
 				</div>
@@ -374,7 +420,9 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Creating custom button & console in AEM</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">Creating custom button & console in AEM</p>
+						</div>
 						<p class="publishDate">August 9, 2023</p>
 					</div>
 				</div>
@@ -387,7 +435,9 @@
 						<p class="formsTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">AEM Forms : Adaptive Form Fragments</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;">AEM Forms : Adaptive Form Fragments</p>
+						</div>
 						<p class="publishDate">Aug 24, 2023</p>
 					</div>
 				</div>
