blog title hover changes

--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							Dispatcher</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Working with Dispatcher</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Working with Dispatcher">Working with Dispatcher</p>
 						</div>
 						<p class="publishDate">April 25, 2023</p>
 					</div>
@@ -91,7 +91,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM SPA</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;" >Mapping AEM Component to SPA Component</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Mapping AEM Component to SPA Component">Mapping AEM Component to SPA Component</p>
 						</div>
 						<p class="publishDate">April 11, 2023</p>
 					</div>
@@ -106,7 +106,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM SPA</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;" >Getting started with AEM SPA</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Getting started with AEM SPA">Getting started with AEM SPA</p>
 						</div>
 						<p class="publishDate">March 29, 2023</p>
 					</div>
@@ -121,7 +121,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;" >How to Add Custom Functions in Rule Editor</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="How to Add Custom Functions in Rule Editor">How to Add Custom Functions in Rule Editor</p>
 						</div>
 						<p class="publishDate">March 15, 2023</p>
 					</div>
@@ -136,7 +136,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;" >Submitting Adaptive Form using Form Data Model</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Submitting Adaptive Form using Form Data Model">Submitting Adaptive Form using Form Data Model</p>
 						</div>
 						<p class="publishDate">February 28, 2023</p>
 					</div>
@@ -151,7 +151,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;" >OCR Data Extraction in AEM Forms</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="OCR Data Extraction in AEM Forms">OCR Data Extraction in AEM Forms</p>
 						</div>
 						<p class="publishDate">June 09, 2023</p>
 					</div>
@@ -166,7 +166,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;" >Enhancing Security with SMS Two Factor Authentication in AEM Forms</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Enhancing Security with SMS Two Factor Authentication in AEM Forms">Enhancing Security with SMS Two Factor Authentication in AEM Forms</p>
 						</div>
 						<p class="publishDate">June 24, 2023</p>
 					</div>
@@ -181,7 +181,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;" >AEM GraphQL</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="AEM GraphQL">AEM GraphQL</p>
 						</div>
 						<p class="publishDate">February 14, 2023</p>
 					</div>
@@ -196,7 +196,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Query Builder in AEM</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Query Builder in AEM">Query Builder in AEM</p>
 						</div>
 						<p class="publishDate">May 23, 2023</p>
 					</div>
@@ -211,7 +211,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">OSGi Factory Configuration cardinality and limit</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="OSGi Factory Configuration cardinality and limit">OSGi Factory Configuration cardinality and limit</p>
 						</div>
 						<p class="publishDate">August 17, 2024</p>
 					</div>
@@ -226,7 +226,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">AEM as a Cloud Service: Powering Next-Generation Digital Experiences</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="AEM as a Cloud Service: Powering Next-Generation Digital Experiences">AEM as a Cloud Service: Powering Next-Generation Digital Experiences</p>
 						</div>
 						<p class="publishDate">May 24, 2023</p>
 					</div>
@@ -241,7 +241,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Context Aware Configuration</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Context Aware Configuration">Context Aware Configuration</p>
 						</div>
 						<p class="publishDate">November 09, 2023</p>
 					</div>
@@ -256,7 +256,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Targeting in AEM - Part 1</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Targeting in AEM - Part 1">Targeting in AEM - Part 1</p>
 						</div>
 						<p class="publishDate">August 01, 2024</p>
 					</div>
@@ -271,7 +271,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Indexing in AEM</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Indexing in AEM">Indexing in AEM</p>
 						</div>
 						<p class="publishDate">November 24, 2023</p>
 					</div>
@@ -286,7 +286,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title tooltip" style="font-size: 1em; color: #555;">Sending Email on Submission of Adaptive Form</p>
+							<p class="blog-title tooltip" style="font-size: 1em; color: #555;" title="Sending Email on Submission of Adaptive Form">Sending Email on Submission of Adaptive Form</p>
 						</div>
 						<p class="publishDate">January 31, 2023</p>
 					</div>
@@ -301,7 +301,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title tooltip" style="font-size: 1em; color: #555;">Show Hide in Rule Editor</p>
+							<p class="blog-title tooltip" style="font-size: 1em; color: #555;" title="Show Hide in Rule Editor">Show Hide in Rule Editor</p>
 						</div>
 						<p class="publishDate">July 04, 2024</p>
 					</div>
@@ -316,7 +316,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Custom Prefill Services In AEM Forms</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Custom Prefill Services In AEM Forms">Custom Prefill Services In AEM Forms</p>
 						</div>
 						<p class="publishDate">June 20, 2024</p>
 					</div>
@@ -331,7 +331,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Geolocation : AEM Forms with Dynamic Location</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Geolocation : AEM Forms with Dynamic Location">Geolocation : AEM Forms with Dynamic Location</p>
 						</div>
 						<p class="publishDate">July 19, 2024</p>
 					</div>
@@ -346,7 +346,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">AEM Forms with Google Maps API's</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="AEM Forms with Google Maps API's">AEM Forms with Google Maps API's</p>
 						</div>
 						<p class="publishDate">August 03, 2024</p>
 					</div>
@@ -361,7 +361,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Introduction to AEM Forms</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Introduction to AEM Forms">Introduction to AEM Forms</p>
 						</div>
 						<p class="publishDate">January 17, 2023</p>
 					</div>
@@ -376,7 +376,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Introduction to AEM Sites</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Introduction to AEM Sites">Introduction to AEM Sites</p>
 						</div>
 						<p class="publishDate">January 3, 2023</p>
 					</div>
@@ -391,7 +391,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Handelling Vanity URLs in AEM</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Handelling Vanity URLs in AEM">Handelling Vanity URLs in AEM</p>
 						</div>
 						<p class="publishDate">July 9, 2023</p>
 					</div>
@@ -406,7 +406,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">OSGI Configuration Factory</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="OSGI Configuration Factory">OSGI Configuration Factory</p>
 						</div>
 						<p class="publishDate">July 24, 2023</p>
 					</div>
@@ -421,7 +421,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">MSM (Multi Site Manager)</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="MSM (Multi Site Manager)">MSM (Multi Site Manager)</p>
 						</div>
 						<p class="publishDate">May 9, 2023</p>
 					</div>
@@ -436,7 +436,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">Creating custom button & console in AEM</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Creating custom button & console in AEM">Creating custom button & console in AEM</p>
 						</div>
 						<p class="publishDate">August 9, 2023</p>
 					</div>
@@ -451,7 +451,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<div class="one-line">
-							<p class="blog-title" style="font-size: 1em; color: #555;">AEM Forms : Adaptive Form Fragments</p>
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="AEM Forms : Adaptive Form Fragments">AEM Forms : Adaptive Form Fragments</p>
 						</div>
 						<p class="publishDate">Aug 24, 2023</p>
 					</div>
