--- a/blog.html
+++ b/blog.html
@@ -82,6 +82,21 @@
 					</div>
 				</div>
 			</a>
+			<a href="./blogs/aemcaas-dispatcher.html" style="text-decoration: none;" class="blog-item">
+				<div id="dispatcher" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Dispatcher.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="dispatcherTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							Dispatcher</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Migrating the Dispatcher Configuration from AMS to AEM as a Cloud Service">Migrating the Dispatcher Configuration from AMS to AEM as a Cloud Service</p>
+						</div>
+						<p class="publishDate">August 31, 2024</p>
+					</div>
+				</div>
+			</a>
 			<a href="./blogs/spa-component-mapping.html" style="text-decoration: none;" class="blog-item">
 				<div id="spa" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
