changes in servlets blog

--- a/blogs/aemcaas-dispatcher.html
+++ b/blogs/aemcaas-dispatcher.html
@@ -31,7 +31,7 @@
 
     <!-- Header -->
     <section class="sub-header"
-        style="background-image: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url('/images/Cover\ Sites.jpg');">
+        style="background-image: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url('/images/Cover\ Dispatcher.jpg');">
         <nav>
             <a href="/index.html"><img src="/images/infodales/Info Dales Main Logo 03.webp" alt="logo"></a>
             <div class="nav-links" id="navLinks">
