--- a/blogs/aemcaas-dispatcher.html
+++ b/blogs/aemcaas-dispatcher.html
@@ -110,7 +110,7 @@
                     </p>
                     <p style="margin-top: -10px;">This command will display the list of available tools.</p>
                     <div class="image-container">
-                        <img src="/images/AEM-Cloud-Images/aio-cli-tools.webp" alt="aio-cli-tools-img" />
+                        <img src="../images/Aem-Cloud-Images/aio-cli-tools.webp" alt="aio-cli-tools-img" />
                     </div>
                     <h4 tyle="text-align: left; margin: 0px 0">Step 5: Configure the Migration Tool</h4>
                     <p>Navigate to the configuration file located at:</p>
@@ -119,7 +119,7 @@
                         Update the file with the paths to your AEM-sdk-dispatcher source and ams-dispatcher source, then
                         save the changes.</p>
                     <div class="image-container">
-                        <img src="/images/AEM-Cloud-Images/dispatcher-config.webp" alt="dispatcher-config">
+                        <img src="../images/Aem-Cloud-Images/dispatcher-config.webp" alt="dispatcher-config">
                     </div>
                     <h4 tyle="text-align: left; margin: 0px 0">Step 6: Run the Dispatcher Converter</h4>
                     <p>Once everything is set up, execute the dispatcher conversion command:</p>
@@ -129,7 +129,7 @@
                     </div>
                     <p style="margin-top: -10px;">After conversion its looks like this </p>
                     <div class="image-container">
-                        <img src="/images/AEM-Cloud-Images/dispatcher-logs.webp" alt="dispatcher-logs" />
+                        <img src="../images/Aem-Cloud-Images/dispatcher-logs.webp" alt="dispatcher-logs" />
                     </div>
                     <p>After the conversion, navigate to the target folder. You will find a newly converted dispatcher
                         folder. Replace its <span style="color: green;">src</span> folder with the <span
@@ -470,7 +470,7 @@
                                     validation.</p>
                             </li>
                             <div class="image-container">
-                                <img src="/images/AEM-Cloud-Images/dispatcher-phases.webp" alt="dispatcher-phases-img" />
+                                <img src="../images/Aem-Cloud-Images/dispatcher-phases.webp" alt="dispatcher-phases-img" />
                             </div>
                         </ul>
                     </div>
@@ -497,7 +497,7 @@
                                 <p>After running it looks like :</p>
                             </li>
                             <div class="image-container">
-                                <img src="/images/AEM-Cloud-Images/starting-dispatcher.webp" alt="starting-dispatcher" />
+                                <img src="../images/Aem-Cloud-Images/starting-dispatcher.webp" alt="starting-dispatcher" />
                             </div>
                         </ul>
                     </div>
