--- a/blogs/Servlets.html
+++ b/blogs/Servlets.html
@@ -243,7 +243,8 @@
                                     )
                                     public class AssetResourceServlet extends SlingSafeMethodsServlet {
                                         @Override
-                                        protected void doGet(SlingHttpServletRequest request, SlingHttpServletResponse response) throws ServletException, IOException {
+                                        protected void doGet(SlingHttpServletRequest request,
+                                        SlingHttpServletResponse response) throws ServletException, IOException {
                                             PrintWriter out = response.getWriter();
                                             out.println("Get Invoked");
                                             try(ResourceResolver resolver = request.getResourceResolver()){
