--- a/blogs/Introduction-to-EDS.html
+++ b/blogs/Introduction-to-EDS.html
@@ -10,7 +10,7 @@
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Blogs | Introduction to Edge Delivery Services" />
-    <meta property="og:description" content="Welcome to the blog designed for developers new to the OSGI Factory Concepts. This blog will walk you through How the Osgi Configuration class has been created and how to retrive the list of Configurations" />
+    <meta property="og:description" content="Welcome to the blog designed for developers new to the Edsge delivery service Concepts. This blog will walk you through the basic concepts of Edge delivery service and what is its purpose" />
     <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
     <meta property="og:site_name" content="Blogs | Introduction to Edge Delivery Services" />
 	<link rel="stylesheet" href="/style.css">
