changes of Introduction-to-Document-based-authoring blog

--- a/blogs/Introduction-to-Document-Based-Authoring.html
+++ b/blogs/Introduction-to-Document-Based-Authoring.html
@@ -111,6 +111,19 @@
          </div>
          <div>
          </div>
+         <hr style="margin-top: 30px;"/>
+                <div class="author-details">
+                    <div id="like-icon" class="like-icon">
+                       <span id="like-count" class="like-count">0</span>
+                       <span id="like-btn" class="like-btn">
+                       <img src="/images/clap.webp" alt="Like">
+                       </span>
+                    </div>
+                    <div>
+                       <span class="author-name">Owais Pathan | </span>
+                       <span class="author-designation">AEM Developer</span>
+                    </div>
+                 </div>
       </section>
       <div class="social-icons">
          <a href="https://www.linkedin.com/company/infodales-tech-solution/" class="linkedin"><img src="/images/linkedin.webp" alt="LinkedIn"></a>
