added Introduction to compoenents and slingmodel and changes in Introduction-to-Document-Based-Authoring blog and Servlets blog

--- a/blog.html
+++ b/blog.html
@@ -502,6 +502,21 @@
 					</div>
 				</div>
 			</a>
+			<a href="./blogs/Introduction to Components and Sling Model.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Introduction to Components and Sling Model">Introduction to Components and Sling Model</p>
+						</div>
+						<p class="publishDate">January 18, 2023</p>
+					</div>
+				</div>
+			</a>
 			<a href="./blogs/adaptive-form-fragments.html" style="text-decoration: none;" class="blog-item">
 				<div id="forms" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
