--- a/blogs/Introduction-to-Document-Based-Authoring.html
+++ b/blogs/Introduction-to-Document-Based-Authoring.html
@@ -5,7 +5,7 @@
       <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Welcome to the blog designed for developers new to the Edge delivery service Concepts. In this blog we will walk you through Document Based Authoring concept Document Based Authoring (DBA) in Adobe Experience Manager (AEM) is a content authoring paradigm designed to simplify the creation, management, and delivery of structured content.">
-      <meta name="keywords" content="Infodales, Introduction to Document Based Authoring">
+      <meta name="keywords" content="Infodales, Introduction to Document Based Authoring, document based authoring in aem, aem eds, aem franklin, helix, aem helix, document based authoring in aem franklin, document based authoring">
       <meta property="og:locale" content="en_US" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Blogs | Introduction to Document Based Authoring" />
