--- a/blogs/Servlets.html
+++ b/blogs/Servlets.html
@@ -5,14 +5,14 @@
 	<title>Blogs | Servlets in AEM</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Welcome to the blog designed for developers new to the OSGI Factory Concepts. This blog will walk you through How the Osgi Configuration class has been created and how to retrive the list of Configurations">
-  	<meta name="keywords" content="Infodales, OSGI Configuration Factory">
+	<meta name="description" content="In this blog we will be understanding what are servlets in AEM plus what are the ways in which they are registered. Also we will understand in brief which type to use and when. Lets begin!">
+  	<meta name="keywords" content="infodales, servlets in aem. registered by path, registered by resourcetype, doget, dopost, dohead, dooptions, doput">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | OSGI Configuration Factory" />
-    <meta property="og:description" content="Welcome to the blog designed for developers new to the OSGI Factory Concepts. This blog will walk you through How the Osgi Configuration class has been created and how to retrive the list of Configurations" />
+    <meta property="og:title" content="Blogs | Servlets in AEM" />
+    <meta property="og:description" content="In this blog we will be understanding what are servlets in AEM plus what are the ways in which they are registered. Also we will understand in brief which type to use and when. Lets begin!" />
     <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | OSGI Configuration Factory" />
+    <meta property="og:site_name" content="Blogs | Servlets in AEM" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
